data/derived/comb/progs/unify/prog2048.ml.out
Characters 77-92:
  | Sine e1 -> sin(eval e1, x, y);;
                  ^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type float
